# fsrcnn

./: .gitignore  README.md  pyproject.toml
pretrained/: fsrcnn_div2k.ckpt
scripts/: eval.py  infer.py  train.py
src/fsrcnn/data/: dataset.py  datasets.py
src/fsrcnn/models/: __init__.py  fsrcnn.py
src/fsrcnn/utils/: __init__.py  image_ops.py  metrics.py
