[project]
name = "fsrcnn"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Sukhrob Ilyosbekov", email = "suxrobgm@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = "==3.13.*"
dependencies = [
    "numpy>=2.2.6", 
    "opencv-python>=4.12.0.88", 
    "Pillow>=11.3.0", 
    "tqdm>=4.67.1", 
    "rich>=14.1.0", 
    "scikit-image>=0.25.2", 
    "torch>=2.8.0", 
    "torchvision>=0.23.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
]

[tool.pdm.scripts]
train = "python scripts/train.py --train_dir data/t91 --val_dir data/set14 --test_dir data/set5 --scale 4 --epochs 1000 --batch_size 128 --patch_size 32 --val_freq 20 --save_dir runs/fsrcnn_t91"
train_d64_s16_m6 = "python scripts/train.py --train_dir data/t91 --val_dir data/set14 --test_dir data/set5 --scale 4 --epochs 1000 --d 64 --s 16 --m 6 --batch_size 128 --patch_size 32 --val_freq 20 --save_dir runs/fsrcnn_t91_d64_s16_m6"
train_div2k = "python scripts/train.py --train_dir data/div2k/train --val_dir data/div2k/val --test_dir data/set14 --scale 4 --epochs 5000 --d 64 --s 16 --m 6 --batch_size 128 --patch_size 64 --val_freq 20 --save_dir runs/fsrcnn_div2k"
eval = "python scripts/eval.py --data_dir data/set14 --scale 4 --include_bicubic --weights pretrained/fsrcnn_div2k.ckpt"
infer = "python scripts/infer.py --input_dir data/set14 --scale 4 --save_bicubic --weights pretrained/fsrcnn_div2k.ckpt"

[tool.pdm]
distribution = false
resolution.respect-source-order = true

[tool.pdm.build]
package-dir = "src"
includes = ["fsrcnn"]

[[tool.pdm.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu129"
verify_ssl = true

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
